# llama4-tiny-vlm

./: .gitignore  README.md  config.toml  dataset.py  model.py  pyproject.toml  run.py
notebooks/: build_model.ipynb  build_tokenizer.ipynb  dataset_exploration.ipynb  debug.ipynb
preference_tuning/: dataset.py  run.py
preference_tuning/notebooks/: explore_dataset.ipynb
text_pretraining/: dataset.py  model.py  resume.py  run.py
text_pretraining/notebooks/: bpe_tokenizer.json  build_model.ipynb  build_tokenizer.ipynb  debug.ipynb  explore_dataset.ipynb  inference.ipynb  model_size.ipynb
vision_language_alignment/: dataset.py  inference.py  model.py  run.py
vision_language_alignment/notebooks/: build_vision_encoder.ipynb  data_preparation.ipynb  explore_dataset.ipynb  inference.ipynb  model_assembly.ipynb  tokenizer_setup.ipynb
visual_instruction_tuning/: bpe_tokenizer_with_image_tag.json  instruction_dataset.py  model.py  run.py
visual_instruction_tuning/notebooks/: download_coco_images.ipynb  explore_dataset.ipynb
