[project]
name = "llama4-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "argparse>=1.4.0",
    "black>=25.11.0",
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
